Stop storeDiv from overflowing.

--- a/jscoverage-ie.css
+++ b/jscoverage-ie.css
@@ -53,3 +53,8 @@
   position: static;
   width: 100%;
 }
+
+#storeDiv {
+  position: static;
+  width: 100%;
+}
