--- a/jscoverage.css
+++ b/jscoverage.css
@@ -245,7 +245,11 @@ store tab
 */
 
 #storeDiv {
-  margin-top: 10px;
+  position: absolute;
+  top: 3em;
+  left: 1em;
+  right: 1em;
+  bottom: 1em;
   overflow: auto;
 }
 
